--- a/views/index.pug
+++ b/views/index.pug
@@ -21,6 +21,7 @@ html
         meta(name='theme-color', content='#ffffff')
         meta(name='viewport' content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
         meta(charset='utf-8')
+        title=title    
     body
         section#main-container
         footer.site-footer
