--- a/index.scss
+++ b/index.scss
@@ -4,8 +4,12 @@ $secondary-color: #125688;
 
 body {
   background: #fafafa;
-  color: #125688;
+  color: $secondary-color;
   font-family: Montserrat;
+}
+
+.landing {
+  margin: 30px auto;
 }
 
 .iphone {
@@ -52,18 +56,51 @@ body {
 }
 
 .signup-form .btn.btn-signup {
-  background-color: #125688;
+  background-color: $secondary-color;
 }
 
-.header{
-  background-color:white;
-  color:$secondary-color !important;
+.header {
+  background-color: white;
+  color: $secondary-color;
   box-shadow: none;
   border-bottom: 1px solid #edeeee;
 }
-.timeline{
+
+.timeline {
   padding: 30px 0;
 }
-.landing{
-  margin:30px auto;
+
+$avatar-size: 48px;
+
+.avatar {
+  width: $avatar-size;
+  height: $avatar-size;
+  border-radius: 50%;
+  float: left;
+  margin-right: 12px;
+}
+
+.card .username {
+  color: $secondary-color;
+}
+
+.card small.time {
+  line-height: $avatar-size;
+}
+
+.card p {
+  padding: 20px 0;
+}
+
+.card .likes {
+  line-height: 30px;
+  margin-left: 12px;
+}
+
+.card i {
+  font-size: 30px;
+}
+
+.card .fa-heart-o {
+  color: $secondary-color;
 }
