--- a/views/index.pug
+++ b/views/index.pug
@@ -26,6 +26,7 @@ html
     meta(charset='utf-8')
     title=title
   body
+    section#header-container
     section#main-container
     section#hello
     
